--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,10 @@
     <title>Iniciar Sesión</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
-<body>
-    <div class="container">
-        <h1>Iniciar Sesión</h1>
+<body class="login-body">
+    <div class="container login-container">
+        <h1 class="login-title">Iniciar Sesión</h1>
+
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 <ul>
@@ -18,21 +19,24 @@
                 </ul>
             {% endif %}
         {% endwith %}
-        <form method="POST">
-            {{ form.hidden_tag() }}
-            <div class="form-group">
-                <label for="email">Email:</label>
-                {{ form.email(class="form-control", size=32) }}
-            </div>
-            <div class="form-group">
-                <label for="password">Contraseña:</label>
-                {{ form.password(class="form-control", size=32) }}
-            </div>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-primary") }}
-            </div>
-        </form>
-        <a class="btn btn-primary" href="{{ url_for('auth.register') }}">Nuevo Usuario</a>
+
+        <div class="form-container">
+            <form method="POST" action="{{ url_for('auth.login') }}">
+                {{ form.hidden_tag() }}
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    {{ form.email(class="form-control", size=32) }}
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña:</label>
+                    {{ form.password(class="form-control", size=32) }}
+                </div>
+                <div class="button-group">
+                    <button type="submit" class="btn btn-action">Iniciar sesión</button>
+                    <a class="btn btn-action" href="{{ url_for('auth.register') }}">Nuevo usuario</a>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
