--- a/templates/rules.html
+++ b/templates/rules.html
@@ -7,23 +7,25 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
-    <div class="container">
-        <h1>Normas del Torneo</h1>
-        <ul>
-            {% for regla in reglas %}
-                <li>{{ regla }}</li>
-            {% endfor %}
-        </ul>
+        <h1 class="title">Normas del Torneo</h1>
+        <div class="rules-list">
+            <ul>
+                {% for regla in reglas %}
+                    <li><strong>{{ regla }}</strong></li>
+                {% endfor %}
+            </ul>
+        </div>
 
-        {% if current_user.is_admin %}
-            <a href="{{ url_for('admin.modify_rules') }}">
-                <button type="button" class="btn-primary">Modificar Normas</button>
+        <div class="button-group">
+            {% if current_user.is_admin %}
+                <a href="{{ url_for('admin.modify_rules') }}">
+                    <button type="button" class="btn btn-action">Modificar Normas</button>
+                </a>
+            {% endif %}
+
+            <a href="{{ url_for('user.home') }}">
+                <button type="button" class="btn btn-action">Inicio</button>
             </a>
-        {% endif %}
-
-        <a href="{{ url_for('user.home') }}">
-            <button type="button" class="btn-secondary">Inicio</button>
-        </a>
-    </div>
+        </div>
 </body>
 </html>
